Fixed the image being too tall now...

--- a/src/com/sidebar-tv/tv.less
+++ b/src/com/sidebar-tv/tv.less
@@ -17,7 +17,7 @@
 				width: calc(~"100% - 1em");
 				display:block;
 				position: absolute;
-				height: 100%;
+				height: auto;
 			}
 		}
 		& > .-live {
